--- a/plantillas.css
+++ b/plantillas.css
@@ -73,6 +73,12 @@ main{display:flex;
                  align-items: center;
                  
                 }
+/* Boton de subir */
+
+.red{margin-bottom: 5rem;
+
+}
+
 /*Efectos de agrandacion a la hora de poner el cursor*/
 
 .plantilla_nombre_entrenadores:hover{
@@ -96,7 +102,9 @@ main{display:flex;
                          box-shadow: 0px 5px 25px grey;
                          position: relative;                 
                         }
-                 
+.red:hover {background-color: #ac0b0b;
+            border-color: #ac0b0b;
+           }               
 
 @media screen and (max-width: 1000px){
     .plantilla_nombre_entrenadores{width: 52%;}
