cambio en noticias

--- a/general.css
+++ b/general.css
@@ -79,6 +79,8 @@
         font-weight: bold;
         width: 100%;
         padding-bottom: 2rem;
+        justify-content: center;
+        align-items: center;
     }
 
     .footer-logo img {
