--- a/calendario.css
+++ b/calendario.css
@@ -6,6 +6,13 @@ body{
 
 }
 
+footer {
+  text-align: center;
+  background-color: black;
+  color: white;
+  align-items: center;
+}
+
 
 /*div 1*/
 .entrada_1 {
@@ -71,40 +78,11 @@ input:hover{
 
   /* Media-Queries */
 
-  @media only screen and (max-width: 894px) {
-    .image {
-      width: 50%;
-    }
-  
-    .home{
-      width: 10%;
-    }
-    .entradas {
-      width: 15%;
-    }
-  }
-  
-  
-  @media only screen and (max-width: 700px) {
-    .image {
-      width: 50%;
-    }
-  input{
-    font-size: small;
-  }
-    .home{
-      width:10% ;
-    }
-    .entradas {
-      width: 15%;
-    }
-  } 
-
   @media only screen and (max-width: 500px) {
     /* Ajustes adicionales para dispositivos móviles */
   
     .entrada_1,
-    .entrada_2 {
+    .entrada_2{
       flex-direction: column;
       align-items: center;
       text-align: center;
@@ -124,5 +102,10 @@ input:hover{
     input {
       font-size: smaller; /* Ajusta según tus necesidades */
       transform: none; /* Elimina la rotación si es necesario */
+    }
+    footer img{
+      width: 30%;
+   
+      
     }
   }
